# ROS_CK

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: arm.yaml  joint_names_xerobotvisai2.yaml
launch/: display.launch  gazebo.launch  gmapping.launch  navigation.launch
maps/: maze_map.pgm  maze_map.yaml  new_map.pgm  new_map.yaml
meshes/: base_link.STL  cam_link.STL  gps_link.STL  lidar_link.STL  phai_link.STL  taymay1_link.STL  taymay2_link.STL  trai_link.STL
param/: base_local_planner_params.yaml  costmap_common_params.yaml  dummy.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
rviz/: gmapping.rviz  navigation.rviz  rviz.rviz
scripts/: arm.py  detect_human.py  evaluate_map.py  goal_navigation.py  maze_navigation.py  restart_gazebo.sh
urdf/: xerobotvisai2.csv  xerobotvisai2.urdf
worlds/: human.world  room.world  simple_maze.world  test2.world
