<package format="2">
  <name>xerobotvisai2</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for xerobotvisai2</p>
    <p>This package contains configuration data, 3D models and launch files
for xerobotvisai2 robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>

  <!-- Thêm phần phụ thuộc cần thiết -->
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>controller_manager</depend>
  <depend>effort_controllers</depend>
  <depend>transmission_interface</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>

  <export>
    <architecture_independent />
  </export>
</package>
